<resources>
    <string name="app_name">02.Task02</string>
    <string name="first_name">first name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="enter_you_phione_number">Enter You Phione Number</string>
    <string name="class">Class</string>
    <string name="grade">Grade</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>